[package]
name = "sonic-pi-tool"
version = "0.1.0"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "sonic-pi-tool"
path = "src/main.rs"

[dependencies]
rosc = "~0.7"
clap = { version = "~3.1", features = ["cargo"] }
nix = "~0.24"
ansi_term = "~0.12"
dirs = "~4.0"
escaper = "~0.1"
